# best-repo-ever

./: README.md  pyproject.toml
crewenv/: pyvenv.cfg
db/: chroma.sqlite3
src/automating_rfp_evaluation_for_consulting_firms/: crew.py  main.py
src/automating_rfp_evaluation_for_consulting_firms/config/: agents.yaml  tasks.yaml
src/best_repo_ever/config/: agents.yaml  tasks.yaml
